Se corrigieron algunos detalles en cuanto a la copia de listas y el input de los TextEdits

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".AddCriterioActivity" />
         <activity android:name=".RegistroProyectosActivity" />
-        <activity android:name=".AsignacionValoresActivity"></activity>
+        <activity android:name=".AsignacionValoresActivity" />
+        <activity android:name=".MatrizDecisionActivity"></activity>
     </application>
 
 </manifest>
